--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,16 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+/* body {
+    background-color: black;
+}
+
+span {
+    color: white;
+    font-weight: bold;
+    font-size: 5rem;
+    padding: 30px;
+    border-style: solid;
+    border-color: darkgray;
+} */
