added clock emoji and styling

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,8 +11,12 @@
 */
 
 /* Below are some styles I was testing out: */
-/* body {
+body {
     background-color: black;
+}
+
+.container {
+    margin-top: 20px;
 }
 
 span {
@@ -22,4 +26,4 @@ span {
     padding: 30px;
     border-style: solid;
     border-color: darkgray;
-} */
+}
